# Astra

./: .env.template  .gitignore  .mcp.json  README.md  convictions.json  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: py_check.sh
.github/workflows/: autotrader.yml  backup.yml  daily_analysis.yml  deploy_pages.yml  exploration.yml  fundamentals_refresh.yml  weekly_analysis.yml
dashboard/: index.html
dashboard/css/: style.css
dashboard/js/: app.js
dashboards/: gen_observability.py  observability.json
data/: portfolio_history.csv
prompts/: advisor_note.mustache  exploration_candidates.mustache
scripts/: install-hooks.sh
src/: agent.py  agent_broker.py  agent_executor.py  agent_guardrails.py  config.py  crypto.py  data_layer.py  db.py  exploration.py  fundamentals.py  logger.py  mcp.py  mcp_loop.py  memory.py  notify.py  observability.py  outcomes.py  performance.py  robinhood.py  strategy.py  timeout.py
src/brain/: README.md  __init__.py  conviction.py  entry.py  exit.py  factors.py  hard_rules.py  normalize.py  params.py  regime.py  score.py  sizing.py  snapshot.py  version.py
supabase/: schema.sql  seed.py
supabase/migrations/: 001_paper_trades.sql  002_paper_trades_sizing.sql  003_robinhood_tokens.sql  004_exploration_candidates.sql  005_tracking.sql  006_pg_cron_dispatch.sql  007_observability.sql  008_revoke_anon_trades.sql  009_agent_trades.sql  010_portfolio_buying_power.sql  011_ml_data_capture.sql  (+6 more)
tests/: conftest.py  test_agent_broker.py  test_agent_executor.py  test_agent_guardrails.py  test_brain_conviction.py  test_brain_entry.py  test_brain_exit.py  test_brain_factors.py  test_brain_sizing.py  test_brain_version.py  test_data_layer.py  test_exploration.py  test_fundamentals.py  test_mcp.py  test_mcp_loop.py  test_memory.py  test_notify.py  test_observability.py  test_outcomes.py  test_performance.py  test_robinhood.py  test_strategy.py  test_timeout.py
