[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astra"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.30.0",
    "chevron>=0.14.0",
    "starlette>=0.27.0",
    "cryptography>=42.0.0",
    "telegramify-markdown>=1.2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "ruff>=0.15",
    "pyright>=1.1.400",
]
# Only needed to regenerate the Grafana dashboard (dashboards/gen_observability.py),
# not for tests/CI. Install with: pip install -e ".[dashboards]"
dashboards = [
    "grafana-foundation-sdk>=10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
